made banner text small

--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,9 @@ small {
 small {
   color: var(--clr-neutral);
 }
-
+.text--sm{
+  font-size: 12px;
+}
 /* ------------------------------------------------------ */
 /* -- Display -- */
 
